--- a/STM32F103C8X_projects/printFunction_for_Debugging/printMsg.uvprojx
+++ b/STM32F103C8X_projects/printFunction_for_Debugging/printMsg.uvprojx
@@ -329,7 +329,7 @@
             <uC99>1</uC99>
             <uGnu>1</uGnu>
             <useXO>0</useXO>
-            <v6Lang>3</v6Lang>
+            <v6Lang>5</v6Lang>
             <v6LangP>1</v6LangP>
             <vShortEn>1</vShortEn>
             <vShortWch>1</vShortWch>
@@ -404,6 +404,16 @@
               <FileType>1</FileType>
               <FilePath>.\printMsg.c</FilePath>
             </File>
+            <File>
+              <FileName>_HAL_GPIO.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\_HAL_GPIO.c</FilePath>
+            </File>
+            <File>
+              <FileName>_HAL_GPIO.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\_HAL_GPIO.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -459,5 +469,14 @@
       </file>
     </files>
   </RTE>
+
+  <LayerInfo>
+    <Layers>
+      <Layer>
+        <LayName>printMsg</LayName>
+        <LayPrjMark>1</LayPrjMark>
+      </Layer>
+    </Layers>
+  </LayerInfo>
 
 </Project>
