--- a/TIMER_project/timer_test_project.uvprojx
+++ b/TIMER_project/timer_test_project.uvprojx
@@ -10,7 +10,7 @@
       <TargetName>Target 1</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pArmCC>6180000::V6.18::ARMCLANG</pArmCC>
+      <pArmCC>6190000::V6.19::ARMCLANG</pArmCC>
       <pCCUsed>6180000::V6.18::ARMCLANG</pCCUsed>
       <uAC6>1</uAC6>
       <TargetOption>
@@ -424,6 +424,16 @@
               <FileName>_UART.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\_UART.c</FilePath>
+            </File>
+            <File>
+              <FileName>_I2C.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\_I2C.h</FilePath>
+            </File>
+            <File>
+              <FileName>_I2C.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\_I2C.c</FilePath>
             </File>
           </Files>
         </Group>
