--- a/TIMER_project/timer_test_project.uvprojx
+++ b/TIMER_project/timer_test_project.uvprojx
@@ -435,6 +435,16 @@
               <FileType>1</FileType>
               <FilePath>.\_I2C.c</FilePath>
             </File>
+            <File>
+              <FileName>_BMP388.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\_BMP388.h</FilePath>
+            </File>
+            <File>
+              <FileName>_BMP388.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\_BMP388.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
