--- a/TeamOrionSensorTests/MDK-ARM/TeamOrionSensorTests.uvprojx
+++ b/TeamOrionSensorTests/MDK-ARM/TeamOrionSensorTests.uvprojx
@@ -10,8 +10,8 @@
       <TargetName>TeamOrionSensorTests</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pArmCC>6190000::V6.19::ARMCLANG</pArmCC>
-      <pCCUsed>6190000::V6.19::ARMCLANG</pCCUsed>
+      <pArmCC>6180000::V6.18::ARMCLANG</pArmCC>
+      <pCCUsed>6180000::V6.18::ARMCLANG</pCCUsed>
       <uAC6>1</uAC6>
       <TargetOption>
         <TargetCommonOption>
@@ -550,6 +550,26 @@
               <FileType>5</FileType>
               <FilePath>..\Core\Inc\bno055_stm32.h</FilePath>
             </File>
+            <File>
+              <FileName>_BMP388.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Core\Inc\_BMP388.h</FilePath>
+            </File>
+            <File>
+              <FileName>I2C_sensorDriver.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Core\Inc\I2C_sensorDriver.h</FilePath>
+            </File>
+            <File>
+              <FileName>_BMP388.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\_BMP388.c</FilePath>
+            </File>
+            <File>
+              <FileName>I2C_sensorDriver.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\I2C_sensorDriver.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -571,5 +591,14 @@
     </components>
     <files/>
   </RTE>
+
+  <LayerInfo>
+    <Layers>
+      <Layer>
+        <LayName>TeamOrionSensorTests</LayName>
+        <LayPrjMark>1</LayPrjMark>
+      </Layer>
+    </Layers>
+  </LayerInfo>
 
 </Project>
